[gd_scene load_steps=4 format=3 uid="uid://or11esp1njh5"]

[ext_resource type="Script" uid="uid://dxbe8jcbq3bk2" path="res://scenes/ingame/player/upgrade_icon.gd" id="1_8d087"]
[ext_resource type="Texture2D" uid="uid://c4iemid50j8xb" path="res://textures/icons/tower_shoot.png" id="1_jos5u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xpj5r"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.48235294, 0.6784314, 1, 0.4)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 6

[node name="UpgradeIcon" type="TextureRect"]
anchors_preset = -1
anchor_right = 0.017
anchor_bottom = 0.031000001
offset_right = -0.6400032
offset_bottom = -1.4800034
texture = ExtResource("1_jos5u")
script = ExtResource("1_8d087")

[node name="VBox" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_right = 10.0
offset_bottom = 31.0
alignment = 1

[node name="Label" type="Label" parent="VBox"]
layout_mode = 2
text = "1"
horizontal_alignment = 1

[node name="TimerProgressBar" type="ProgressBar" parent="VBox"]
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_xpj5r")
value = 100.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
